k8s/staging/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ecommerce-staging
  labels:
    app: payment-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      imagePullSecrets:
        - name: ghcr-regcred
      containers:
        - name: payment-service
          image: ghcr.io/dmandevv/e-commerce-api/payment-service:staging
          ports:
            - containerPort: 3005
          resources:
            requests:
              cpu: 30m
              memory: 80Mi
            limits:
              cpu: 150m
              memory: 160Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 35
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ecommerce-staging
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - port: 3005
      targetPort: 3005
