k8s/staging/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: ecommerce-staging
  labels:
    app: product-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      imagePullSecrets:
        - name: ghcr-regcred
      containers:
        - name: product-service
          image: ghcr.io/dmandevv/e-commerce-api/product-service:staging
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: 30m
              memory: 80Mi
            limits:
              cpu: 150m
              memory: 160Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ecommerce-staging
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - port: 3002
      targetPort: 3002
